# kira

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  compose.yaml  llms.txt  main.py  manifest  pyproject.toml
.beads/: issues.jsonl  metadata.json
api/: main.py  seed.py
api/auth/: api_key.py  session.py
api/core/: config.py  deps.py
api/db/: models.py  session.py
api/db/alembic/: env.py
api/models/: artifacts.py  audit.py  chat.py  comments.py  enums.py  issues.py  tickets.py  users.py  webhooks.py
api/routes/: artifacts.py  audit.py  auth.py  chat.py  comments.py  dashboard.py  enums.py  issues.py  tickets.py  users.py  webhooks.py
api/services/: artifacts.py  audit.py
deploy/: Dockerfile.api  Dockerfile.frontend  Dockerfile.ttyd  nginx-iframe.conf  nginx.conf  tmux.conf  ttyd-entrypoint.sh  ttyd-session.sh
deploy/argocd/: application.yaml
deploy/helm/kira/: Chart.yaml  values-openshift.yaml  values.yaml
deploy/k8s/: api.yaml  configmap.yaml  frontend.yaml  namespace.yaml  postgres.yaml  secret.yaml
docs/: deploying-to-openshift.md  iframe-embedding.md
docs/api/: openapi.yaml
docs/superpowers/plans/: 2026-03-28-helm-chart.md  2026-03-28-interactive-lozenges.md  (+7 more)
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  types.ts
scripts/: export-openapi.py
security/: hardening-checklist.md  security-assessment-report.md
tests/: conftest.py  test_artifacts.py  test_auth.py  test_chat.py  test_comments.py  test_dashboard.py  test_enums.py  test_issues.py  test_tickets.py  test_users.py
(+51 files in other folders)
